fix add self as friend